--- a/pages/fahrzeug.html
+++ b/pages/fahrzeug.html
@@ -134,12 +134,83 @@
                                     </div>
                                 </div>
 
+                                <!-- ========================================
+                                     ZUSATZANGEBOTE (EXTRAS)
+                                     ======================================== 
+                                     Buchbare Zusatzleistungen mit Preisen
+                                     - Werden in Gesamtpreis einberechnet
+                                     ======================================== -->
+                                <div class="mb-3">
+                                    <label class="small fw-bold form-label mb-2">
+                                        <i class="fa-solid fa-plus-circle me-1"></i>Zusatzangebote hinzubuchen
+                                    </label>
+                                    <div class="extras-list">
+                                        <!-- Fahrradhalter -->
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="extraBikeRack" 
+                                                   data-price="25" onchange="calculatePrice()">
+                                            <label class="form-check-label d-flex justify-content-between w-100" for="extraBikeRack">
+                                                <span><i class="fa-solid fa-bicycle me-2 text-muted"></i>Fahrradhalter</span>
+                                                <span class="text-muted small">+25€</span>
+                                            </label>
+                                        </div>
+                                        <!-- Camping-Möbel -->
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="extraFurniture" 
+                                                   data-price="35" onchange="calculatePrice()">
+                                            <label class="form-check-label d-flex justify-content-between w-100" for="extraFurniture">
+                                                <span><i class="fa-solid fa-chair me-2 text-muted"></i>Camping-Möbel (Tisch & Stühle)</span>
+                                                <span class="text-muted small">+35€</span>
+                                            </label>
+                                        </div>
+                                        <!-- Erweiterungszelt -->
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="extraTent" 
+                                                   data-price="45" onchange="calculatePrice()">
+                                            <label class="form-check-label d-flex justify-content-between w-100" for="extraTent">
+                                                <span><i class="fa-solid fa-campground me-2 text-muted"></i>Erweiterungszelt</span>
+                                                <span class="text-muted small">+45€</span>
+                                            </label>
+                                        </div>
+                                        <!-- Sonnendach -->
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="extraAwning" 
+                                                   data-price="30" onchange="calculatePrice()">
+                                            <label class="form-check-label d-flex justify-content-between w-100" for="extraAwning">
+                                                <span><i class="fa-solid fa-umbrella me-2 text-muted"></i>Sonnendach (zusätzlich)</span>
+                                                <span class="text-muted small">+30€</span>
+                                            </label>
+                                        </div>
+                                        <!-- Bettwäsche -->
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="extraBedding" 
+                                                   data-price="20" onchange="calculatePrice()">
+                                            <label class="form-check-label d-flex justify-content-between w-100" for="extraBedding">
+                                                <span><i class="fa-solid fa-bed me-2 text-muted"></i>Bettwäsche-Set</span>
+                                                <span class="text-muted small">+20€</span>
+                                            </label>
+                                        </div>
+                                        <!-- Handtücher -->
+                                        <div class="form-check mb-2">
+                                            <input class="form-check-input" type="checkbox" id="extraTowels" 
+                                                   data-price="15" onchange="calculatePrice()">
+                                            <label class="form-check-label d-flex justify-content-between w-100" for="extraTowels">
+                                                <span><i class="fa-solid fa-shower me-2 text-muted"></i>Handtücher-Set</span>
+                                                <span class="text-muted small">+15€</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Ende Zusatzangebote -->
+
                                 <!-- Preisberechnung -->
                                 <div id="priceCalculation" class="bg-light p-3 rounded mb-3 hidden">
                                     <div class="d-flex justify-content-between mb-1">
-                                        <span><span id="calcDays">0</span> Nächte x <span id="pricePerNight">0</span> €</span>
+                                        <span><span id="calcDays">0</span> Nächte x <span id="calcPrice">0</span> €</span>
                                         <span><span id="calcTotalBase">0</span> €</span>
                                     </div>
+                                    <!-- Zusatzangebote in Rechnung -->
+                                    <div id="extrasInPrice" class="small"></div>
                                     <div class="d-flex justify-content-between mb-1 text-muted small">
                                         <span>Servicegebühr</span>
                                         <span>15 €</span>
