--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -24,17 +24,11 @@
             <div class="legal-page">
                 <h1>Impressum</h1>
 
-                <div class="alert alert-info">
-                    <i class="fa-solid fa-info-circle me-2"></i>
-                    <strong>Hinweis:</strong> Dies ist eine Demo-Website für Bildungszwecke. Alle nachfolgenden Angaben sind fiktiv und dienen ausschließlich zu Demonstrationszwecken. Es handelt sich nicht um ein reales Unternehmen.
-                </div>
-
                 <h2>Angaben gemäß § 5 TMG</h2>
                 <p>
                     <strong>CamperRent Deutschland GmbH</strong><br>
                     Reisemobilstraße 42<br>
-                    60311 Frankfurt am Main<br>
-                    Deutschland
+                    60311 Frankfurt am Main
                 </p>
 
                 <p class="mt-3">
@@ -44,89 +38,36 @@
                 </p>
 
                 <h2>Vertreten durch</h2>
-                <p>
-                    <strong>Geschäftsführer:</strong><br>
-                    Max Reisemann<br>
-                    Sarah Wanderlust
-                </p>
+                <p>Max Reisemann, Sarah Wanderlust (Geschäftsführung)</p>
 
                 <h2>Kontakt</h2>
                 <p>
-                    <i class="fa-solid fa-phone me-2"></i><strong>Telefon:</strong> +49 (0) 69 / 123 456 78<br>
-                    <i class="fa-solid fa-fax me-2"></i><strong>Telefax:</strong> +49 (0) 69 / 123 456 79<br>
-                    <i class="fa-solid fa-envelope me-2"></i><strong>E-Mail:</strong> <a href="mailto:info@camperrent-demo.de">info@camperrent-demo.de</a><br>
-                    <i class="fa-solid fa-globe me-2"></i><strong>Website:</strong> www.camperrent-demo.de
+                    <i class="fa-solid fa-phone me-2"></i>+49 (0) 69 / 123 456 78<br>
+                    <i class="fa-solid fa-envelope me-2"></i><a href="mailto:info@camperrent-demo.de">info@camperrent-demo.de</a>
                 </p>
 
-                <h2>Aufsichtsbehörde</h2>
-                <p>
-                    Gewerbeaufsichtsamt Frankfurt am Main<br>
-                    Musterweg 15<br>
-                    60313 Frankfurt am Main
-                </p>
-
-                <h2>Berufsbezeichnung und berufsrechtliche Regelungen</h2>
-                <p>
-                    <strong>Berufsbezeichnung:</strong> Wohnmobilvermietung<br>
-                    <strong>Zuständige Kammer:</strong> IHK Frankfurt am Main<br>
-                    <strong>Verliehen in:</strong> Deutschland
-                </p>
-
-                <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
+                <h2>Verantwortlich für den Inhalt</h2>
                 <p>
                     Max Reisemann<br>
-                    Reisemobilstraße 42<br>
-                    60311 Frankfurt am Main
+                    Reisemobilstraße 42, 60311 Frankfurt am Main
                 </p>
 
                 <h2>EU-Streitschlichtung</h2>
                 <p>
-                    Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:
-                    <a href="https://ec.europa.eu/consumers/odr/" target="_blank" rel="noopener noreferrer">https://ec.europa.eu/consumers/odr/</a><br>
-                    Unsere E-Mail-Adresse finden Sie oben im Impressum.
-                </p>
-
-                <h2>Verbraucherstreitbeilegung / Universalschlichtungsstelle</h2>
-                <p>
-                    Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.
+                    Plattform zur Online-Streitbeilegung: <a href="https://ec.europa.eu/consumers/odr/" target="_blank" rel="noopener noreferrer">ec.europa.eu/consumers/odr</a>
                 </p>
 
                 <h2>Haftungsausschluss</h2>
-                
-                <h3>Haftung für Inhalte</h3>
                 <p>
-                    Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.
+                    Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte verantwortlich. Eine Verpflichtung zur Überwachung übermittelter oder gespeicherter fremder Informationen besteht nicht (§§ 8-10 TMG). Links zu externen Websites wurden bei Verlinkung geprüft. Eine permanente Kontrolle verlinkter Seiten ist ohne konkrete Rechtsverletzung nicht zumutbar.
                 </p>
                 <p>
-                    Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
+                    Die Inhalte dieser Website unterliegen dem deutschen Urheberrecht. Vervielfältigung, Bearbeitung und Verbreitung bedürfen der schriftlichen Zustimmung. Downloads sind für den privaten, nicht kommerziellen Gebrauch gestattet.
                 </p>
 
-                <h3>Haftung für Links</h3>
-                <p>
-                    Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.
-                </p>
-                <p>
-                    Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
-                </p>
-
-                <h3>Urheberrecht</h3>
-                <p>
-                    Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.
-                </p>
-                <p>
-                    Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
-                </p>
-
-                <h3>Bildnachweise</h3>
-                <p>
-                    Die auf dieser Website verwendeten Bilder stammen von <a href="https://unsplash.com" target="_blank" rel="noopener noreferrer">Unsplash.com</a> und sind unter der Unsplash-Lizenz zur freien Verwendung lizenziert.
-                </p>
-
-                <h2>Technische Umsetzung</h2>
-                <p>
-                    <strong>Konzept & Entwicklung:</strong> Demo-Projekt<br>
-                    <strong>Frameworks:</strong> Bootstrap 5, Font Awesome<br>
-                    <strong>Hosting:</strong> Lokal (Demo-Umgebung)
+                <p class="mt-3">
+                    <strong>Bildmaterial:</strong> <a href="https://unsplash.com" target="_blank" rel="noopener noreferrer">Unsplash.com</a> (Unsplash-Lizenz)<br>
+                    <strong>Technologie:</strong> Bootstrap 5, Font Awesome, Python Flask
                 </p>
 
                 <div class="mt-5 text-center">
