--- a/pages/fahrzeug.html
+++ b/pages/fahrzeug.html
@@ -236,6 +236,27 @@
 
     <!-- Footer wird dynamisch geladen -->
 
+    <!-- Buchungsbestätigungs-Modal -->
+    <div class="modal fade" id="bookingSuccessModal" tabindex="-1" aria-labelledby="bookingSuccessModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header bg-success text-white">
+                    <h5 class="modal-title" id="bookingSuccessModalLabel">
+                        <i class="fa-solid fa-check-circle me-2"></i>Buchung erfolgreich!
+                    </h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Schließen"></button>
+                </div>
+                <div class="modal-body" id="bookingSuccessModalBody">
+                    <!-- Wird dynamisch von JavaScript gefüllt -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Schließen</button>
+                    <a href="profil.html" class="btn btn-primary">Zu meinen Buchungen</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
