--- a/seiten/fahrzeug.html
+++ b/seiten/fahrzeug.html
@@ -22,7 +22,7 @@
     <main>
         <div class="container py-4">
             <!-- Zurück-Button -->
-            <a href="../index.html" class="btn btn-link text-decoration-none text-muted mb-3 ps-0">
+            <a href="../startseite.html" class="btn btn-link text-decoration-none text-muted mb-3 ps-0">
                 <i class="fa-solid fa-arrow-left me-2"></i>Zurück zur Übersicht
             </a>
 
@@ -261,11 +261,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="../js/api.js"></script>
-    <script src="../js/data.js"></script>
-    <script src="../js/shared.js"></script>
-    <script src="../js/calendar.js"></script>
-    <script src="../js/vehicleDetail.js"></script>
-    <script src="../js/booking.js"></script>
+    <script src="../skripte/schnittstelle.js"></script>
+    <script src="../skripte/daten.js"></script>
+    <script src="../skripte/gemeinsam.js"></script>
+    <script src="../skripte/kalender.js"></script>
+    <script src="../skripte/fahrzeugdetails.js"></script>
+    <script src="../skripte/buchung.js"></script>
 </body>
 </html>
