--- a/seiten/impressum.html
+++ b/seiten/impressum.html
@@ -71,7 +71,7 @@
                 </p>
 
                 <div class="mt-5 text-center">
-                    <a href="../index.html" class="btn btn-primary">
+                    <a href="../startseite.html" class="btn btn-primary">
                         <i class="fa-solid fa-home me-2"></i>Zurück zur Startseite
                     </a>
                 </div>
@@ -85,8 +85,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="../js/api.js"></script>
-    <script src="../js/data.js"></script>
-    <script src="../js/shared.js"></script>
+    <script src="../skripte/schnittstelle.js"></script>
+    <script src="../skripte/daten.js"></script>
+    <script src="../skripte/gemeinsam.js"></script>
 </body>
 </html>
