--- a/seiten/profil.html
+++ b/seiten/profil.html
@@ -29,7 +29,7 @@
                         <p class="mb-0 opacity-75">Verwalten Sie Ihre Buchungen und Einstellungen</p>
                     </div>
                     <div class="col-md-4 text-md-end">
-                        <a href="../index.html" class="btn btn-light">
+                        <a href="../startseite.html" class="btn btn-light">
                             <i class="fa-solid fa-home me-2"></i>Zur Startseite
                         </a>
                     </div>
@@ -82,10 +82,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="../js/api.js"></script>
-    <script src="../js/data.js"></script>
-    <script src="../js/shared.js"></script>
-    <script src="../js/auth.js"></script>
-    <script src="../js/profile.js"></script>
+    <script src="../skripte/schnittstelle.js"></script>
+    <script src="../skripte/daten.js"></script>
+    <script src="../skripte/gemeinsam.js"></script>
+    <script src="../skripte/authentifizierung.js"></script>
+    <script src="../skripte/profil.js"></script>
 </body>
 </html>
