--- a/startseite.html
+++ b/startseite.html
@@ -171,9 +171,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="js/api.js"></script>
-    <script src="js/data.js"></script>
-    <script src="js/shared.js"></script>
-    <script src="js/vehicles.js"></script>
+    <script src="skripte/schnittstelle.js"></script>
+    <script src="skripte/daten.js"></script>
+    <script src="skripte/gemeinsam.js"></script>
+    <script src="skripte/fahrzeuge.js"></script>
 </body>
 </html>
