--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CamperRent - Mieten Sie Freiheit</title>
+    <title>InterCamp - Ihr Zuhause auf Rädern</title>
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
         <!-- Hero Section -->
         <section class="hero-header">
             <div class="container">
-                <h1 class="display-3 fw-bold mb-3">Mieten Sie Freiheit</h1>
+                <h1 class="display-3 fw-bold mb-3">Ihr Abenteuer wartet!</h1>
                 <p class="lead mb-4">Entdecken Sie die Welt mit unseren geprüften Wohnmobilen</p>
                 <a href="#fahrzeuge" class="btn btn-light btn-lg px-5" onclick="scrollToFleet()">
                     Fahrzeuge entdecken <i class="fa-solid fa-arrow-down ms-2"></i>
@@ -35,8 +35,8 @@
         <!-- Fahrzeug-Liste -->
         <section id="fahrzeuge" class="container py-5">
             <div class="text-center mb-5">
-                <h2 class="display-5 fw-bold">Unsere Fahrzeuge</h2>
-                <p class="lead text-muted">Wählen Sie aus unserer Flotte das perfekte Wohnmobil für Ihr Abenteuer</p>
+                <h2 class="display-5 fw-bold">Unsere rollenden Hotels</h2>
+                <p class="lead text-muted">Finden Sie Ihren fahrbaren Urlaubstraum</p>
             </div>
 
             <!-- ========================================
@@ -117,7 +117,7 @@
         <section class="advantages-section py-5 mt-5">
             <div class="container">
                 <div class="text-center mb-5">
-                    <h2 class="display-4 fw-bold mb-3">Warum CamperRent?</h2>
+                    <h2 class="display-4 fw-bold mb-3">Warum InterCamp?</h2>
                     <p class="lead" style="color: #1976d2; font-weight: 500;">Ihre Vorteile auf einen Blick</p>
                 </div>
                 <div class="row g-4">
