--- a/pages/datenschutz.html
+++ b/pages/datenschutz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datenschutz - CamperRent</title>
+    <title>Datenschutz - InterCamp</title>
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,9 +26,9 @@
 
                 <h2>1. Verantwortliche Stelle</h2>
                 <p>
-                    CamperRent Deutschland GmbH<br>
-                    Reisemobilstraße 42, 60311 Frankfurt am Main<br>
-                    E-Mail: datenschutz@camperrent-demo.de
+                    InterCamp Deutschland GmbH<br>
+                    Hauptstraße 1, 68159 Mannheim<br>
+                    E-Mail: datenschutz@intercamp-demo.de
                 </p>
 
                 <h2>2. Datenverarbeitung auf dieser Website</h2>
@@ -59,7 +59,7 @@
 
                 <h2>5. Ihre Rechte</h2>
                 <p>
-                    Sie haben das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit und Widerspruch. Bei Fragen wenden Sie sich an datenschutz@camperrent-demo.de. Ein Beschwerderecht bei der zuständigen Datenschutzaufsichtsbehörde steht Ihnen zu.
+                    Sie haben das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit und Widerspruch. Bei Fragen wenden Sie sich an datenschutz@intercamp-demo.de. Ein Beschwerderecht bei der zuständigen Datenschutzaufsichtsbehörde steht Ihnen zu.
                 </p>
 
                 <h2>6. SSL-Verschlüsselung</h2>
