--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impressum - CamperRent</title>
+    <title>Impressum - InterCamp</title>
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,9 +26,9 @@
 
                 <h2>Angaben gemäß § 5 TMG</h2>
                 <p>
-                    <strong>CamperRent Deutschland GmbH</strong><br>
-                    Reisemobilstraße 42<br>
-                    60311 Frankfurt am Main
+                    <strong>InterCamp Deutschland GmbH</strong><br>
+                    Hauptstraße 1<br>
+                    68159 Mannheim
                 </p>
 
                 <p class="mt-3">
@@ -38,18 +38,18 @@
                 </p>
 
                 <h2>Vertreten durch</h2>
-                <p>Max Reisemann, Sarah Wanderlust (Geschäftsführung)</p>
+                <p>Andrea Reis, David Siligato (Geschäftsführung)</p>
 
                 <h2>Kontakt</h2>
                 <p>
-                    <i class="fa-solid fa-phone me-2"></i>+49 (0) 69 / 123 456 78<br>
-                    <i class="fa-solid fa-envelope me-2"></i><a href="mailto:info@camperrent-demo.de">info@camperrent-demo.de</a>
+                    <i class="fa-solid fa-phone me-2"></i>+49 1234567890<br>
+                    <i class="fa-solid fa-envelope me-2"></i><a href="mailto:info@intercamp-demo.de">info@intercamp-demo.de</a>
                 </p>
 
                 <h2>Verantwortlich für den Inhalt</h2>
                 <p>
-                    Max Reisemann<br>
-                    Reisemobilstraße 42, 60311 Frankfurt am Main
+                    Andrea Reis & David Siligato<br>
+                    Hauptstraße 1, 68159 Mannheim
                 </p>
 
                 <h2>EU-Streitschlichtung</h2>
@@ -66,8 +66,8 @@
                 </p>
 
                 <p class="mt-3">
-                    <strong>Bildmaterial:</strong> <a href="https://unsplash.com" target="_blank" rel="noopener noreferrer">Unsplash.com</a> (Unsplash-Lizenz)<br>
-                    <strong>Technologie:</strong> Bootstrap 5, Font Awesome, Python Flask
+                    <strong>Bildmaterial:</strong> <a href="https://unsplash.com" target="_blank" rel="noopener noreferrer">Unsplash.com</a> & Discord (Unsplash-Lizenz)<br>
+                    <strong>Technologie:</strong> HTML5, CSS3, JavaScript (Vanilla), Bootstrap 5, Font Awesome, JSON Server (Node.js)
                 </p>
 
                 <div class="mt-5 text-center">
